improve dark mode and fix bugs

--- a/src/components/editor/editor-pane/tool-bar/tool-bar.scss
+++ b/src/components/editor/editor-pane/tool-bar/tool-bar.scss
@@ -1,6 +1,14 @@
 .btn-toolbar {
   body.dark &, & {
     border-bottom: 1px solid #ededed;
+    border-top: 1px solid #ededed;
+
+
+    body.dark & {
+      @import '../../../../style/dark';
+      border-bottom: 2px solid $cyan;
+      border-top: 2px solid $cyan;
+    }
 
     .btn {
       padding: 0.1875rem 0.5rem;
@@ -13,6 +21,10 @@
     }
 
     .btn-group:not(:last-of-type)::after {
+      body.dark & {
+        @import '../../../../style/dark';
+        background-color: $cyan;
+      }
       background-color: #e2e6ea;
       width: 2px;
       padding: 0.25rem 0;
