--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,5 +1,3 @@
-
-
 $blue:    #337ab7 !default;
 $cyan:    #5EB7E0 !default;
 
@@ -7,6 +5,11 @@ body.dark {
   @import "dark";
   @import "../../node_modules/bootstrap/scss/bootstrap";
   color: $dark;
+
+  &.modal-open .modal {
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
 }
 @import "../../node_modules/bootstrap/scss/bootstrap";
 @import '../../node_modules/react-bootstrap-typeahead/css/Typeahead';
